# webinars

./: README.md
creating_gpt_chatbots_for_enterprise_usecases/: eval_questions.json  hr_rag.ipynb  pg_eval_dataset.json  pyproject.toml  rag_evaluation.ipynb  readme.md  streamlit_app.py
